# Prust-App

./: Cargo.toml  README.md  Xargo.toml  build.rs  readme.md
.cargo/: config  config.toml
src/: app.rs  freertos.rs  hal.rs  lib.rs
src/app/: func_man.rs  utils.rs
src/app/func_man/: functions.rs
src/freertos/: alloc.rs
src/hal/: adc.rs  gpio_output.rs  timer.rs  uart.rs
