[package]
name = "prust_rtos"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
overflow-checks=false
opt-level=1

[dependencies]
prust_core = {git = "https://github.com/visionspacetec/Prust-Core", package = "prust_core"}
libc = "0.2.86"
freertos_rs = "0.3.0"
embedded-ffi = "0.1.2"
heapless = "0.6"
byteorder = {version = "1.3.4", default-features = false }
arrayvec = {version ="0.5.1", default-features = false}
hashbrown = "0.8.2"
cty = "0.2.1"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}

[build-dependencies]
cbindgen = "0.17.0"